--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
 .profile_avatar {
-    width: 100px ;
+    width: 100px;
+}
+
+.navbar_logo {
+    height: 70% !important;
+}
+
+.label {
+    font-weight: bolder;
 }
